<resources>
    <string name="app_name">qishou</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rest">未开工 v</string>
    <string name="job_summary">工作汇总</string>
    <string name="my_wallet">我的钱包</string>
    <string name="message">消息</string>
    <string name="work_setting">接单设置</string>
    <string name="help">帮助与反馈</string>
    <string name="setting">设置</string>
    <string name="kefu">联系客服</string>

    <string name="remain_amount">我的余额 （元）</string>
    <string name="transit_amount">当前无未到账金额</string>
    <string name="today_detail">今日收支明细</string>
    <string name="history_detail">历史明细 ></string>
    <string name="agree"> 我同意</string>

    <string name="work"> 接单 </string>
    <string name="reset"> 休息 </string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="cancel">取消</string>

</resources>
