<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/job_summary"
            android:icon="@mipmap/menu_1"
            android:title="@string/job_summary" />
        <item
            android:id="@+id/my_wallet"
            android:icon="@mipmap/menu_2"
            android:title="@string/my_wallet" />
        <item
            android:id="@+id/message"
            android:icon="@mipmap/menu_3"
            android:title="@string/message" />
        <item
            android:id="@+id/work_setting"
            android:icon="@mipmap/menu_4"
            android:title="@string/work_setting" />
        <item
            android:id="@+id/help"
            android:icon="@mipmap/menu_5"
            android:title="@string/help" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@mipmap/menu_setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/kefu"
                android:icon="@mipmap/menu_kefu"
                android:title="@string/kefu" />
        </menu>
    </item>

</menu>
